# rs-fractal-julia

./: .gitignore  Cargo.toml  README.md  build.rs
examples/animation/: main.rs
examples/openexr/: main.rs
examples/png/: main.rs
src/: benchmark.rs  buffer.rs  fixed_point.rs  julia-asm.S  julia-xmm-f32-packed.S  julia-xmm-f32-scalar.S  julia-xmm-f64-packed.S  julia-xmm-f64-scalar.S  julia-ymm-f32-packed.S  julia-ymm-f64-packed.S  julia.rs  lib.rs  main.rs
src/julia/: asm_backend.rs  asmxmm_backend.rs  cpu_backend.rs  mod.rs
