[package]
name = "fractal-julia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = true

[[example]]
name="png"

[[example]]
name="openexr"

[dependencies]
openexr = "*"
half = "*"

[dev-dependencies]
png = "*"

[profile.release]
lto = true
